# demoForGTest

./: CMakeLists.txt  a.cpp  a.h  main.cpp
Test/: CMakeLists.txt  test.cpp  test.h
